# DataPlatform

./: .gitignore  AGENTS.md  DATASETS.md  INITIALIZE_USAGE.md  README.md  __init__.py  _version.py  audit.py  client.py  exceptions.py  initialize.py  models.py  pyproject.toml
.agent/: architecture.md  repo-map.md
backends/: __init__.py  base.py  clickhouse.py  clickhouse_catalog.py  parquet.py  tushare.py  tushare_catalog.py  tushare_schemas.py
docs/: conf.py  index.md
docs/_scripts/: sync_reference.py
docs/_static/: custom.css
docs/_static/diagrams/: components.dot  pit-sequence.dot  query-sequence.dot
docs/api/: index.md  public.rst
docs/architecture/: extending.md  index.md  models.md
docs/backends/: clickhouse.md  index.md  parquet.md  tushare.md
docs/contributing/: docstrings.md  index.md  maintenance.md
docs/datasets/: capabilities.md  field_notes.toml  fields.md  index.md
docs/getting-started/: index.md  initialization.md  installation.md  quickstart.md
docs/guides/: index.md  queries.md  semantics.md
tests/: test_clickhouse.py  test_clickhouse_integration.py  test_client.py  test_dataset_catalog.py  test_documentation.py  test_initialize.py  test_tushare_daily_basic.py  test_tushare_industry.py  test_tushare_parquet.py  test_tushare_pit.py  test_tushare_schemas.py
tools/: dataset_descriptions.toml  generate_dataset_catalog.py
transforms/: __init__.py  panel.py  pit.py
